--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -49,6 +50,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.10.7",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
@@ -58,6 +60,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.57.0",
     "react-resizable-panels": "^2.1.8",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.0.2",
     "recharts": "^2.15.3",
     "shadcn": "^2.4.1",
